[gd_scene load_steps=12 format=3 uid="uid://be612wl8j5kvh"]

[ext_resource type="Script" path="res://Scripts/MemoryObject.gd" id="1_tfvti"]
[ext_resource type="Shader" uid="uid://btrovsif32dki" path="res://Shaders/UIBounce.tres" id="2_i2nk7"]
[ext_resource type="Texture2D" uid="uid://du3a288myjex3" path="res://Sprites/UI/SpacePrompt.png" id="2_xqiao"]

[sub_resource type="Gradient" id="Gradient_7nlsq"]
offsets = PackedFloat32Array(0.221154, 1)
colors = PackedColorArray(0.603922, 0.921569, 0.639216, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rsww5"]
gradient = SubResource("Gradient_7nlsq")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.521368)

[sub_resource type="Gradient" id="Gradient_1ashd"]
offsets = PackedFloat32Array(0, 0.67, 1)
colors = PackedColorArray(0.603922, 0.921569, 0.639216, 1, 0.460993, 0.703464, 0.487935, 0.763333, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t0bam"]
gradient = SubResource("Gradient_1ashd")
width = 7
height = 7
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.15812, 0.491453)

[sub_resource type="Curve" id="Curve_6nh0m"]
max_value = 100.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 100), 140.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_2r44n"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.25188, 1), 0.0, 0.0, 0, 0, Vector2(0.443609, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CircleShape2D" id="CircleShape2D_02he4"]
radius = 50.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lyibq"]
shader = ExtResource("2_i2nk7")

[node name="Memory" type="AnimatedSprite2D"]
light_mask = 2
script = ExtResource("1_tfvti")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.15
texture = SubResource("GradientTexture2D_rsww5")
texture_scale = 0.7

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 5
lifetime = 1.5
texture = SubResource("GradientTexture2D_t0bam")
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, 15)
initial_velocity_min = 20.0
initial_velocity_max = 20.0
damping_min = 0.2
damping_max = 0.2
damping_curve = SubResource("Curve_6nh0m")
angle_min = -720.0
angle_max = 720.0
scale_amount_curve = SubResource("Curve_2r44n")

[node name="InteractBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractBox"]
shape = SubResource("CircleShape2D_02he4")

[node name="Prompt" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_lyibq")
offset_left = -16.0
offset_top = 10.0
offset_right = 16.0
offset_bottom = 42.0
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(16, 16)
texture = ExtResource("2_xqiao")

[connection signal="body_entered" from="InteractBox" to="." method="_on_interact_box_body_entered"]
[connection signal="body_exited" from="InteractBox" to="." method="_on_interact_box_body_exited"]
